--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 	<script src="js/mainService.js"></script>
 	<script src="js/threadsCtrl.js"></script>
 	<script src="js/threadCtrl.js"></script>
+	<script src="js/userService.js"></script>
+	<script src="js/signupCtrl.js"></script>
+	<script src="js/loginCtrl.js"></script>
 </body>
 </html>
